#pragma once

class MapManager
{
public:
    MapManager();
    ~MapManager();

private:

};
