#pragma once

class RedisClient
{
public:
    RedisClient();
    ~RedisClient();

private:

};
